fix: fix gap

--- a/css/main.css
+++ b/css/main.css
@@ -346,7 +346,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .list-anchor-links {
   display: flex;
-  gap: 64px;
+  gap: 68px;
 }
 
 .anchor-link {
