--- a/style/sections/_header.scss
+++ b/style/sections/_header.scss
@@ -17,7 +17,7 @@
 }
 .list-anchor-links {
     display: flex;
-    gap: 64px;
+    gap: 68px;
 }
 .list-anchor-links__item {
 }
